--- a/ntpd.yml
+++ b/ntpd.yml
@@ -1,20 +1,24 @@
 - hosts: all
   tasks:
   - name: Install ntpd
-    yum: 
+    package: 
       name: ntp
       state: latest
   - name: Reconfigure time servers
     lineinfile:
       path: /etc/ntp.conf
-      regexp: "^server 0.amazon.pool.ntp.org iburst$"
-      line: "server pool.ntp.org iburst"
+      regexp: '^server.*iburst$'
+      line: 'server pool.ntp.org iburst'
+    notify: Restart ntpd
   - name: Delete unused time servers
     lineinfile:
       path: /etc/ntp.conf
-      regexp: "^server [1,2,3].amazon.pool.ntp.org iburst$"
+      regexp: "^server [0,1,2,3].*iburst$"
       state: absent
-  - name: Start ntpd
+      backup: yes
+    notify: Restart ntpd
+  handlers:
+  - name: Restart ntpd
     service:
       name: ntpd
-      state: started
+      state: restarted
